[gd_scene load_steps=18 format=3 uid="uid://dujukbu10vbmm"]

[ext_resource type="Script" path="res://scripts/entities/player.gd" id="1_lgfyt"]
[ext_resource type="Script" path="res://scripts/entities/sword.gd" id="3_7pxxd"]
[ext_resource type="Shader" path="res://shaders/fade.gdshader" id="3_iqmy4"]
[ext_resource type="Script" path="res://scripts/components/attack_component.gd" id="3_nq7ea"]
[ext_resource type="Script" path="res://scripts/components/movement_component.gd" id="3_pph25"]
[ext_resource type="Script" path="res://scripts/components/player_rotation_component.gd" id="4_y1oi3"]
[ext_resource type="Script" path="res://scripts/components/jump_component.gd" id="5_20kj8"]
[ext_resource type="PackedScene" uid="uid://x0oxbha36o2h" path="res://scenes/entities/YBot.tscn" id="5_gusos"]
[ext_resource type="Script" path="res://scripts/components/dodge_component.gd" id="6_66sk2"]
[ext_resource type="Script" path="res://scripts/components/block_component.gd" id="7_qnswb"]
[ext_resource type="Script" path="res://scripts/components/fade_component.gd" id="11_kcojp"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_lnhvg"]
radius = 0.3

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bxn4t"]
render_priority = 0
shader = ExtResource("3_iqmy4")
shader_parameter/albedo = Color(0.239216, 0.239216, 0.239216, 1)
shader_parameter/specular = 0.5
shader_parameter/metallic = 0.0
shader_parameter/roughness = 1.0
shader_parameter/normal_strength = 1.0
shader_parameter/alpha_clip = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_q3dg7"]
render_priority = 0
shader = ExtResource("3_iqmy4")
shader_parameter/albedo = Color(0.133333, 0.564706, 0.8, 1)
shader_parameter/specular = 0.5
shader_parameter/metallic = 0.0
shader_parameter/roughness = 1.0
shader_parameter/normal_strength = 1.0
shader_parameter/alpha_clip = 0.0

[sub_resource type="CylinderMesh" id="CylinderMesh_dg00e"]
top_radius = 0.02
bottom_radius = 0.02
height = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2ypnh"]
render_priority = 0
shader = ExtResource("3_iqmy4")
shader_parameter/albedo = Color(1, 1, 1, 1)
shader_parameter/specular = 0.5
shader_parameter/metallic = 0.0
shader_parameter/roughness = 1.0
shader_parameter/normal_strength = 1.0
shader_parameter/alpha_clip = 0.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_cds6g"]
height = 1.0
radius = 0.02

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("character", "movement_component", "jump_component", "block_component", "dodge_component", "rotation_component", "attack_component")]
collision_layer = 2
collision_mask = 9
script = ExtResource("1_lgfyt")
character = NodePath("CharacterModel")
movement_component = NodePath("MovementComponent")
jump_component = NodePath("JumpComponent")
block_component = NodePath("BlockComponent")
dodge_component = NodePath("DodgeComponent")
rotation_component = NodePath("PlayerRotationComponent")
attack_component = NodePath("AttackComponent")

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.135378, 0)
shape = SubResource("CapsuleShape3D_lnhvg")

[node name="CharacterModel" parent="." instance=ExtResource("5_gusos")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, -1.1177, 0)

[node name="GeneralSkeleton" parent="CharacterModel/Armature_004" index="0"]
bones/0/position = Vector3(-0.00109031, 1.79931e-10, 0.00150937)
bones/1/rotation = Quaternion(-0.0366583, -0.0450092, -0.0256831, 0.997983)
bones/2/rotation = Quaternion(0.0368278, 0.0179904, 0.0259353, 0.998823)
bones/3/rotation = Quaternion(0.0120378, 0.00489772, 0.014806, 0.999806)
bones/4/rotation = Quaternion(0.0118477, 0.00507106, 0.0148019, 0.999807)
bones/5/rotation = Quaternion(0.0550596, -0.00184734, 0.0024243, 0.998478)
bones/6/rotation = Quaternion(-0.0776627, 0.00821687, -0.00083645, 0.996946)
bones/8/rotation = Quaternion(0.456583, 0.499602, 0.636238, -0.370313)
bones/9/rotation = Quaternion(0.129626, 0.805651, -0.565505, -0.119697)
bones/10/rotation = Quaternion(0.0112251, -0.707018, 0.0112252, 0.707018)
bones/11/rotation = Quaternion(0.0530069, 0.470257, -0.00468821, 0.880924)
bones/32/rotation = Quaternion(0.473067, -0.481188, -0.638757, -0.369668)
bones/33/rotation = Quaternion(-0.145965, 0.829321, -0.496586, 0.21053)
bones/34/rotation = Quaternion(0.041255, 0.705902, -0.0412551, 0.705902)
bones/35/rotation = Quaternion(0.0404483, -0.567785, 0.0326446, 0.821534)
bones/56/rotation = Quaternion(0.13974, 0.075687, 0.984303, -0.0767571)
bones/57/rotation = Quaternion(-0.0383629, 0.992682, -0.114346, 0.00597067)
bones/58/rotation = Quaternion(-0.0424178, 0.708823, -0.702305, 0.0503853)
bones/61/rotation = Quaternion(-0.0928355, -0.0152927, 0.995174, -0.0278683)
bones/62/rotation = Quaternion(0.0347216, 0.993621, -0.0677833, -0.0831761)
bones/63/rotation = Quaternion(0.0103692, 0.676257, -0.736055, -0.0281299)
bones/64/rotation = Quaternion(-1.59998e-07, 0.998062, 0.0622259, -1.57514e-08)

[node name="Alpha_Joints" parent="CharacterModel/Armature_004/GeneralSkeleton" index="0"]
layers = 2
surface_material_override/0 = SubResource("ShaderMaterial_bxn4t")

[node name="Alpha_Surface" parent="CharacterModel/Armature_004/GeneralSkeleton" index="1"]
layers = 2
surface_material_override/0 = SubResource("ShaderMaterial_q3dg7")

[node name="Sword" type="BoneAttachment3D" parent="CharacterModel/Armature_004/GeneralSkeleton" index="2" node_paths=PackedStringArray("_entity")]
transform = Transform3D(0.409445, 0.0320159, 0.911773, 0.0674899, -0.997709, 0.00472607, 0.909835, 0.0596005, -0.410668, -0.241495, 0.836184, 0.00282639)
bone_name = "RightHand"
bone_idx = 35
script = ExtResource("3_7pxxd")
_entity = NodePath("../../../..")

[node name="Mesh" type="MeshInstance3D" parent="CharacterModel/Armature_004/GeneralSkeleton/Sword"]
transform = Transform3D(-0.891467, -0.453089, -3.91618e-05, 0.453089, -0.891468, -0.000158824, 3.70497e-05, -0.00015933, 1, 0.168411, 0.443186, 0.0233156)
layers = 2
mesh = SubResource("CylinderMesh_dg00e")
surface_material_override/0 = SubResource("ShaderMaterial_2ypnh")

[node name="Area" type="Area3D" parent="CharacterModel/Armature_004/GeneralSkeleton/Sword" groups=["weapon"]]
transform = Transform3D(1, 0, 0, 0, 1, 4.70233e-13, 0, 4.70233e-13, 1, 0, 0, 0)
collision_layer = 4
collision_mask = 8

[node name="Collider" type="CollisionShape3D" parent="CharacterModel/Armature_004/GeneralSkeleton/Sword/Area"]
transform = Transform3D(-0.891466, -0.453088, -3.91619e-05, 0.453088, -0.891466, -0.000158824, 3.70497e-05, -0.00015933, 1, 0.168411, 0.443186, 0.0233156)
shape = SubResource("CylinderShape3D_cds6g")

[node name="AnimationTree" parent="CharacterModel" index="2"]
"parameters/Blocking Speed/scale" = 1.0
"parameters/Running Lock On Look Direction/blend_position" = Vector2(0.0196936, 0.881657)
"parameters/Vertical Movement/blend_amount" = 0

[node name="JumpAnimations" parent="CharacterModel" index="4"]
debug = true

[node name="AttackAnimations" parent="CharacterModel" index="5"]
debug = true

[node name="PlayerRotationComponent" type="Node3D" parent="." node_paths=PackedStringArray("entity")]
script = ExtResource("4_y1oi3")
entity = NodePath("..")

[node name="MovementComponent" type="Node3D" parent="." node_paths=PackedStringArray("target_entity", "rotation_component")]
script = ExtResource("3_pph25")
debug = true
target_entity = NodePath("..")
rotation_component = NodePath("../PlayerRotationComponent")

[node name="JumpComponent" type="Node3D" parent="." node_paths=PackedStringArray("entity", "animations", "movement_component")]
script = ExtResource("5_20kj8")
entity = NodePath("..")
animations = NodePath("../CharacterModel")
movement_component = NodePath("../MovementComponent")

[node name="JumpRaycast" type="RayCast3D" parent="JumpComponent"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.13165, 0)
target_position = Vector3(0, -2, 0)

[node name="BlockComponent" type="Node3D" parent="." node_paths=PackedStringArray("movement_component", "block_animations", "attack_animations")]
script = ExtResource("7_qnswb")
movement_component = NodePath("../MovementComponent")
block_animations = NodePath("../CharacterModel/BlockAnimations")
attack_animations = NodePath("../CharacterModel/AttackAnimations")

[node name="DodgeComponent" type="Node3D" parent="." node_paths=PackedStringArray("entity", "movement_component", "jump_component")]
script = ExtResource("6_66sk2")
dodge_strength = 8.0
_in_air_buffer = 0.1
entity = NodePath("..")
movement_component = NodePath("../MovementComponent")
jump_component = NodePath("../JumpComponent")

[node name="AttackComponent" type="Node3D" parent="." node_paths=PackedStringArray("attack_animations", "movement_component", "weapon")]
script = ExtResource("3_nq7ea")
attack_animations = NodePath("../CharacterModel/AttackAnimations")
movement_component = NodePath("../MovementComponent")
weapon = NodePath("../CharacterModel/Armature_004/GeneralSkeleton/Sword")

[node name="FadeComponent" type="Node3D" parent="." node_paths=PackedStringArray("meshes", "entity")]
script = ExtResource("11_kcojp")
meshes = [NodePath("../CharacterModel/Armature_004/GeneralSkeleton/Alpha_Joints"), NodePath("../CharacterModel/Armature_004/GeneralSkeleton/Alpha_Surface"), NodePath("../CharacterModel/Armature_004/GeneralSkeleton/Sword/Mesh")]
entity = NodePath("..")

[editable path="CharacterModel"]
